@@ -2,7 +2,6 @@ package com.iitca.tecnodesarrollo.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import java.util.List;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -34,20 +33,18 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Autoriza subdominios de Vercel y tu entorno local
-        configuration.setAllowedOriginPatterns(List.of(
+        // Usar Arrays.asList para garantizar compatibilidad nativa
+        configuration.setAllowedOriginPatterns(java.util.Arrays.asList(
             "http://localhost:*",
             "http://127.0.0.1:*",
             "https://*.vercel.app"
         ));
         
-        // Permite los verbos HTTP necesarios para el CRUD
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedMethods(java.util.Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(java.util.Arrays.asList("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // Aplica la configuración a absolutamente todos los endpoints del backend
         source.registerCorsConfiguration("/**", configuration);
         
         return source;
